# PersonalProject

./: .gitignore  .gitmodules
LucentForge/: AGENT_MODEL_SPEC.md  CLAUDE.md  SIMCORE_ARCHITECTURE.md  WORLD_RESOURCE_MODEL.md  main.py  settings.py
LucentForge/ContentData/: schema_agent.json  schema_world.json
LucentForge/ContentData/Claude&GPT/: 2npc_mind_architecture.md  3ai_memory_architecture.md  4world_simulation_design.md  5design_decisions_log.md  6port_strategy.md
LucentForge/ContentData/combat_data/: players.json
LucentForge/Mechanics/: README.md  __init__.py  bootstrap.py
LucentForge/Mechanics/ai/: __init__.py  behavior.py  controller.py  interpreter.py  memory.py  npc.py  npc_logger.py  player.py  proximity.py
LucentForge/Mechanics/ai/states/: __init__.py  idle.py  moving.py  patrolling.py  raiding.py  satisfying.py
LucentForge/Mechanics/biochem/: __init__.py  brain.py  chemical.py  drive.py
LucentForge/Mechanics/combat/: README.md  __init__.py  abilities.py  ability_resolver.py  ability_sets.py  action_selector.py  combat.py  damage_resolver.py  equip.py  fighter.py  items.py  rng.py  rules.py  spell_sets.py  turn_end.py  turn_processor.py  turn_result.py
LucentForge/Mechanics/data/: README.md  __init__.py  abilities.json  context.py  dao.py  entities.json  items.json  loader.py  models.py  needs.json  protocols.py  sources.json
LucentForge/Mechanics/entities/: README.md  __init__.py  base.py  factory.py  stats.py  status.py  traits.py
LucentForge/Mechanics/needs/: __init__.py  need.py  need_factory.py  need_source.py  needs_system.py  source_selector.py
LucentForge/Mechanics/renderer/: __init__.py  combat_scene.py  health_bar.py  hud.py  sprite.py
LucentForge/Mechanics/services/: __init__.py
LucentForge/Mechanics/world/: __init__.py  goblin_threat.py  pathfinder.py  resource_state.py  simulation_clock.py  tile_map.py  town.py  world_sim.py
LucentForge/ReferenceFilesAndCode/CreatureRepo/: ARCHITECTURE_DIAGRAMS.md  PHASE_3B_IMPLEMENTATION_GUIDE.md  PHASE_3B_SESSION_LOG.md  PHASE_4_INDEX.md  PHASE_4_PLANNING_CHARTER.md  PHASE_4_QUICK_START.md  PHASE_4_SPRINT_1_SUMMARY.md  QUICK_REFERENCE.md
LucentForge/ReferenceFilesAndCode/CreatureRepo/tests/: NeedSystemTest.cpp  PersonalityNeedSystemTest.cpp
LucentForge/ReferenceFilesAndCode/Tower Defense/: pyproject.toml
LucentForge/ReferenceFilesAndCode/Tower Defense/src/: enemy.py  enemy_config.py  game_settings.py  main.py  placement_manager.py  projectile.py  tower.py  tower_config.py  tower_type.py
LucentForge/ReferenceFilesAndCode/UnrealTxtFilesOfNeedSystem/: BP_NPC_Parent__Function__CheckIfAtNeedSource.bp.txt
LucentForge/ReferenceFilesAndCode/iso_rpg_lab/: README.txt  build.py
LucentForge/ReferenceFilesAndCode/iso_rpg_lab/data/: abilities.json  enemies.json  items.json
LucentForge/SimCore/: CMakeLists.txt
LucentForge/SimCore/include/: Agent.h  CombatEngine.h  TraitSystem.h  WorldState.h
LucentForge/SimCore/src/modules/agent/: Agent.cpp
LucentForge/SimCore/src/modules/combat/: CombatEngine.cpp  derive.py  status.py
LucentForge/SimCore/src/modules/traits/: TraitSystem.cpp
LucentForge/SimCore/src/modules/world/: WorldState.cpp
LucentForge/SimCore/tests/: simcore_wrapper.py  test_combat_wrapper.py  test_traits.py
LucentForge/context/: README.md  next_session_prompt.md  session_start_lucentforge_template.md  session_state.md
LucentForge/design/: Map Layout in CSV style.md  lucentforge_vision.md
LucentForge/docs/: Caelum LucentForge Session Start.txt  Ideas For How Character stats work.txt
LucentForge/docs/bible/: heartbeat_convergence_vision.md  lucentforge_micro_simulation_v_1.md  lucentforge_sim_core_schema_v_1.md  lucentforge_simulation_foundation_v_1.md
UnrealTxtFilesOfNeedSystem/: BP_AIController_Parent.txt  BP_NPC_Parent__EventGraph.bp.txt  BP_NPC_Parent__Function__AttemptToSatisfyNeed.bp.txt  BP_NPC_Parent__Function__BeginInteractionAtNeedSource.bp.txt  BP_NPC_Parent__Function__ElementsA&B.bp.txt  BP_NPC_Parent__Function__FindSourceByNeed.bp.txt  BP_NPC_Parent__Function__ProcessNeedsLoop.bp.txt  BP_NPC_Parent__Function__SortNeedsByValue_BubbleSort.bp.txt  BP_NPC_Parent__Function__UpdateNeeds.bp.txt  CompleteInteraction.txt
iso_rpg_lab/data/: items.json
iso_rpg_lab/game ideas and philosphy/: world_simulation_codex.md
iso_rpg_lab/gameplay/: loader.py  qfixed.py  rng.py
iso_rpg_lab/sim/: simulate.py
simcore/: CMakeLists.txt  INTELLIJ_SETUP.md  build_and_test.bat
simcore/include/: simcore.h
simcore/include/simcore/adapter/: IWorldQuery.h
simcore/include/simcore/agent/: AgentRegistry.h  DecisionEngine.h  DriveEngine.h  NeedSystem.h  TraitSystem.h
simcore/include/simcore/sim/: EventLog.h  SimRNG.h  TimeManager.h
simcore/include/simcore/world/: ResourceNode.h  WorldState.h
simcore/src/adapter/: IWorldQuery.cpp
simcore/src/agent/: AgentRegistry.cpp  DecisionEngine.cpp  DriveEngine.cpp  NeedSystem.cpp  TraitSystem.cpp
simcore/src/sim/: EventLog.cpp  SimRNG.cpp  TimeManager.cpp
simcore/src/world/: ResourceNode.cpp  WorldState.cpp
simcore/tests/: test_decision.cpp  test_drive.cpp  test_eventlog.cpp  test_integration.cpp  test_needs.cpp  test_resources.cpp  test_rng.cpp  test_time.cpp  test_traits.cpp
(+8 files in other folders)
